samples/_failures_safe/1761291959_b39e0f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fc97605.c: In function ‘cleanup_compression_context’:
./samples/SAFE/__tmp_1fc97605.c:142:8: error: ‘struct CompressionContext’ has no member named ‘max’
  142 |     ctx->max
      |        ^~
./samples/SAFE/__tmp_1fc97605.c:142:13: error: expected ‘;’ at end of input
  142 |     ctx->max
      |             ^
      |             ;
./samples/SAFE/__tmp_1fc97605.c:142:5: error: expected declaration or statement at end of input
  142 |     ctx->max
      |     ^~~
